# tic_tac_toe

./: README.md  main.py  pyproject.toml
sound/: tic-tac-toe.txt
